# clawdfolio

./: .gitignore  LICENSE  PROMOTION.md  README.md  README_CN.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: OPTIONS_STRATEGY_PLAYBOOK_v2.1.md
examples/: basic_usage.py  config.example.yaml
src/clawdfolio/: __init__.py
src/clawdfolio/analysis/: __init__.py  concentration.py  risk.py
src/clawdfolio/brokers/: base.py  demo.py  futu.py  longport.py  registry.py
src/clawdfolio/cli/: __init__.py  main.py
src/clawdfolio/core/: __init__.py  config.py  exceptions.py  types.py
src/clawdfolio/market/: __init__.py  data.py  hours.py
src/clawdfolio/monitors/: __init__.py  earnings.py  options.py  price.py
src/clawdfolio/output/: console.py  json.py
src/clawdfolio/strategies/: __init__.py  dca.py
src/portfolio_monitor/: __init__.py
src/portfolio_monitor/analysis/: __init__.py  concentration.py  risk.py  technical.py
src/portfolio_monitor/brokers/: __init__.py  base.py  demo.py  futu.py  longport.py  registry.py
src/portfolio_monitor/cli/: __init__.py  main.py
src/portfolio_monitor/core/: __init__.py  config.py  types.py
src/portfolio_monitor/market/: __init__.py  calendar.py  hours.py
src/portfolio_monitor/monitors/: __init__.py  earnings.py  price.py
src/portfolio_monitor/output/: __init__.py  console.py  json.py
src/portfolio_monitor/strategies/: __init__.py  dca.py
tests/: __init__.py  conftest.py  test_analysis.py  test_brokers.py  test_cli.py  test_cli_integration.py  test_cli_main.py  test_concentration.py  test_config.py  test_console_output.py  test_core.py  test_exceptions.py  test_history.py  test_market.py  test_market_hours.py  test_market_options.py  test_notifications.py  test_options_monitor.py  test_types.py
