[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-monitor"
version = "1.0.0"
description = "Multi-broker portfolio monitoring with risk analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "YICHENG YANG" }
]
keywords = [
    "finance",
    "portfolio",
    "trading",
    "risk-analysis",
    "investment",
    "stocks",
    "broker",
    "longport",
    "moomoo",
    "futu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.30",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
longport = [
    "longport>=1.0.0",
]
futu = [
    "futu-api>=7.0.0",
]
all = [
    "longport>=1.0.0",
    "futu-api>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
portfolio-monitor = "portfolio_monitor.cli.main:main"

[project.urls]
Homepage = "https://github.com/2165187809-AXE/portfolio-monitor"
Documentation = "https://github.com/2165187809-AXE/portfolio-monitor#readme"
Repository = "https://github.com/2165187809-AXE/portfolio-monitor.git"
Issues = "https://github.com/2165187809-AXE/portfolio-monitor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_monitor"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["portfolio_monitor"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/portfolio_monitor"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
