[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawdfolio"
version = "1.0.1"
description = "AI-powered portfolio monitoring for Claude Code - Multi-broker support with professional risk analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "YICHENG YANG" }
]
keywords = [
    "claude-code",
    "ai",
    "finance",
    "portfolio",
    "trading",
    "risk-analysis",
    "investment",
    "stocks",
    "broker",
    "longport",
    "moomoo",
    "futu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.30",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
longport = [
    "longport>=1.0.0",
]
futu = [
    "futu-api>=7.0.0",
]
all = [
    "longport>=1.0.0",
    "futu-api>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
clawdfolio = "clawdfolio.cli.main:main"

[project.urls]
Homepage = "https://github.com/2165187809-AXE/clawdfolio"
Documentation = "https://github.com/2165187809-AXE/clawdfolio#readme"
Repository = "https://github.com/2165187809-AXE/clawdfolio.git"
Issues = "https://github.com/2165187809-AXE/clawdfolio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clawdfolio"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["clawdfolio"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/clawdfolio"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
